--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
     <header>
         <!-- Profile picture inside header, left-aligned near name -->
-        <img src="/storage/emulated/0/DCIM/Camera/20250321_093922.jpg" alt="Reehana fathima k" class="profile-picture">
+        <img src="20250321_093922.jpg" alt="Reehana fathima k" class="profile-picture">
         <div class="header-content">
             <h1>Reehana fathima k</h1>
             <p>BCA Computer application</p>
@@ -155,8 +155,8 @@
     <section id="resume">
         <div class="section-content" style="text-align: center;">
             <h2>Resume</h2>
-            <!-- Corrected Resume Download Button -->
-            <a href="https://in.docworkspace.com/d/sIKWk3pCqAvvA874G?sa=601.1074" class="download-button">Download CV</a>
+            <!-- Corrected Resume Download  Button-->
+            <a htef="resume.pdf" class="download-button">Download CV</a>
         </div>
     </section>
 
